--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
   socket-collector:
     build: ./
     container_name: socket-collector
+    restart: unless-stopped
     environment:
       output-path: "output-data"
     ports:
