Adding database connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 server.port=8080
 
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/socket-collector
+
 output-path=output
 websocket-client-uri=wss://streamer.finance.yahoo.com/
+ticker.data.save=csv
 subcribe-tickers=BTC-EUR, ETH-EUR, AAPL, AMZN, BBBY, BNTX, CCL, CELH, CHK, CVS, CVX, DIS, DVN, ELY, ENZC, FB, HPQ, IBHE, IMMR, INTC, KO, KOFOL.PR, MA, MAXR, MCD, MONET.PR, MPC, MSFT, NOC, NSRGY, NVAX, NVDA, OXY, PATH, PEP, PFE, PSTH, PSX, REGN, RKT, S&P 500, SBUX, SJI, SPOT, T, TABAK.PR, TSLA, TTCF, TWTR, UPST, V, VOO, WBA, XOM, ZM
