--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,8 +12,8 @@ services:
       - env/app.env #todo should be env var $USERNAME
     depends_on:
       - app_db
-    ports:
-      - "8081:8080"
+#    ports:
+#      - "8081:8080"
     volumes:
       - ./docker-output-data:/output-data
 
@@ -23,7 +23,7 @@ services:
     restart: unless-stopped
     env_file:
       - env/app_db.env #todo should be env var $USERNAME
-    ports:
-      - "5432:5432"
+#    ports:
+#      - "5432:5432"
     volumes:
       - ./db-data:/var/lib/postgresql/data
