--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,24 +6,11 @@ services:
     container_name: socket-collector
     restart: unless-stopped
     environment:
-      output-path: "output-data"
-      spring.datasource.url: jdbc:postgresql://app_db:5432/postgres
-    env_file:
-      - env/app.env #todo should be env var $USERNAME
-    depends_on:
-      - app_db
+      ticker_data_save: none
+      spring.datasource.url: jdbc:postgresql://localhost:5432/postgres
+      spring_datasource_username: $spring_datasource_username
+      spring_datasource_password: $spring_datasource_password
 #    ports:
 #      - "8081:8080"
     volumes:
       - ./docker-output-data:/output-data
-
-  app_db:
-    image: "postgres:14"
-    container_name: socket-collector_database
-    restart: unless-stopped
-    env_file:
-      - env/app_db.env #todo should be env var $USERNAME
-#    ports:
-#      - "5432:5432"
-    volumes:
-      - ./db-data:/var/lib/postgresql/data
